[package]
name = "system-management-src"
version = "0.1.0"
edition = "2024"

[dependencies]
postgres = "0.19"
tokio = { version = "1", features = ["full"] }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"